estilo/estilo.css
/* Hugo Prendes Menéndez - UO288294 */
/* Estilos generales del proyecto MotoGP-Desktop */

/* 0,0,1 */
body {
    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
    background-color: #ffffff;
    color: #333333;
}

/* 0,0,1 */
header {
    background-color: #196719;
    color: transparent;
}

/* 0,0,2 */
header h1 a {
    color: #ffffff;
    background-color: transparent;
    text-decoration: none;
}

/* 0,0,2 */
header nav a {
    color: #ffffff;
    background-color: transparent;
    text-decoration: none;
    font-weight: bold;
}

/* 0,0,2 */
header nav a:visited {
    color: #ffffff;
    background-color: transparent;
}

/* 0,0,2 */
header nav a:hover {
    color: #ffffff;
    background-color: transparent;
}

/* 0,0,2 */
header nav a:active {
    color: #ffffff;
    background-color: transparent;
}

/* 0,0,2 */
p a { 
    color: #196719;
    background-color: transparent;
    text-decoration: none;
    font-weight: bold;
}

/* 0,0,2 */
p a:visited {
    color: #196719;
    background-color: transparent;
}

/* 0,0,2 */
p a:hover {
    color: #196719;
    background-color: transparent;
    text-decoration: none;
}

/* 0,0,2 */
aside a { 
    color: #196719;
    background-color: transparent;
    text-decoration: none;
    font-weight: bold;
}

/* 0,0,2 */
aside a:visited {
    color: #196719;
    background-color: transparent;
}

/* 0,0,2 */
aside a:hover {
    color: #196719;
    background-color: transparent;
    text-decoration: none;
}

/* 0,0,2 */
aside a:active {
    color: #196719;
    background-color: transparent;
    text-decoration: none;
}

/* 0,0,1 */
h2, h3, h4, h5, h6 {
    color: #8B0000;
    background-color: transparent;
}

